--- a/english.html
+++ b/english.html
@@ -62,9 +62,9 @@ Department of Software Engineering <br />
 </ul>
 <h3>Publications</h3>
 <ul>
-<li><p>Tao Zan, Zhenjiang Hu. <b>VoiceJava: A Syntax-Directed Voice Programming Language for Java</b> Electronics 12, no. 1 (2023): 250. https:<i></i>doi.org<i>10.3390</i>electronics12010250</p>
+<li><p>Tao Zan, Zhenjiang Hu. <b>VoiceJava: A Syntax-Directed Voice Programming Language for Java</b> Electronics 12, no. 1 (2023): 250. https://doi.org/10.3390/electronics12010250</p>
 </li>
-<li><p>Tao Zan, Zhenjiang Hu. <b>Blockchain-based Bidirectional Transformations for Access Control and Data Sharing in EMRs</b>. Internetware&rsquo;2020: 12th Asia-Pacific Symposium on Internetware, Singapore, May 12-14, 2021. <a href="./publications/internetware20.pdf">paper</a></p>
+<li><p>Tao Zan, Zhenjiang Hu. Blockchain-based Bidirectional Transformations for Access Control and Data Sharing in EMRs. Internetware&rsquo;2020: 12th Asia-Pacific Symposium on Internetware, Singapore, May 12-14, 2021. <a href="./publications/internetware20.pdf">paper</a></p>
 </li>
 <li><p>Tao Zan, Hugo Pacheco, Hsiang-Shang Ko and Zhenjiang Hu, BiFluX: A Bidirectional Functional Update Language for XML,Japan Society for Software Science and Technology ComputerSoftware, Vol.33, No.4 (2016),pp.93 - 115</p>
 </li>
@@ -123,7 +123,7 @@ Department of Software Engineering <br />
 Email: <i>zan</i> at <i>lyun.edu.cn</i> <br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-31 10:26:16 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-31 12:19:33 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
