--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 </ul>
 <h3>论文</h3>
 <ul>
-<li><p>Tao Zan, Zhenjiang Hu. <b>VoiceJava: A Syntax-Directed Voice Programming Language for Java</b> Electronics 12, no. 1 (2023): 250. https://doi.org/10.3390/electronics12010250</p>
+<li><p>Tao Zan, Zhenjiang Hu. <b>VoiceJava: A Syntax-Directed Voice Programming Language for Java</b>. Electronics 12, no. 1 (2023): 250. https://doi.org/10.3390/electronics12010250</p>
 </li>
 <li><p>Tao Zan, Zhenjiang Hu. Blockchain-based Bidirectional Transformations for Access Control and Data Sharing in EMRs. Internetware&rsquo;2020: 12th Asia-Pacific Symposium on Internetware, Singapore, May 12-14, 2021. <a href="./publications/internetware20.pdf">paper</a></p>
 </li>
@@ -123,7 +123,7 @@
 邮箱: <i>zan</i> at <i>lyun.edu.cn</i> <br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-31 12:19:33 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-31 14:27:48 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
