--- a/english.html
+++ b/english.html
@@ -108,9 +108,9 @@ Department of Software Engineering <br />
 </ul>
 <h2>Teaching</h2>
 <ul>
-<li><p>Data Structure and Algorithms: <a href="https://gitee.com/se-193/">Fall 2020</a>, Spring 2021, Fall 2021</p>
+<li><p>Data Structure and Algorithms: <a href="https://gitee.com/se-193/">Fall 2020</a>, Spring 2021, Fall 2021, Fall 2022</p>
 </li>
-<li><p>Software Architecture and Design: Spring 2021</p>
+<li><p>Software Architecture and Design: Spring 2021, Spring 2022, Spring 2023</p>
 </li>
 </ul>
 <h2>Academic Activities</h2>
@@ -123,7 +123,7 @@ Department of Software Engineering <br />
 Email: <i>zan</i> at <i>lyun.edu.cn</i> <br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-01-31 14:29:08 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-01-31 14:30:54 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
