--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
 </ul>
 <h3>论文</h3>
 <ul>
-<li><p>Xing Zhang, Ruifeng Xie, Guanchen Guo, Xiao He, Tao Zan, Zhenjiang Hu. Fusing Direct Manipulations into Functional Programs. 51st ACM SIGPLAN Symposium on Principles of Programming Languages (<a href="https://popl24.sigplan.org/">POPL 2024</a>), London, United Kingdom, January 17-19, 2024.</p>
+<li><p>Xing Zhang, Ruifeng Xie, Guanchen Guo, Xiao He, Tao Zan, Zhenjiang Hu, Fusing Direct Manipulations into Functional Programs, 51st ACM SIGPLAN Symposium on Principles of Programming Languages (<a href="https://popl24.sigplan.org/">POPL 2024</a>), London, United Kingdom, January 17-19, 2024.</p>
 </li>
 <li><p>Lijie Wang, Tao Zan, Weihua Li, Shengrong Lu, A Syntax-directed Voice-activated Programming Environment for Java, 13th International Conference on IT in Medicine and Education, Wuyishan, China, November 24-26, 2023.</p>
 </li>
-<li><p>Tao Zan, Zhenjiang Hu. VoiceJava: A Syntax-Directed Voice Programming Language for Java. Electronics 12, no. 1 (2023): 250. https://doi.org/10.3390/electronics12010250</p>
+<li><p>Tao Zan, Zhenjiang Hu, VoiceJava: A Syntax-Directed Voice Programming Language for Java, Electronics 12, no. 1 (2023): 250. https://doi.org/10.3390/electronics12010250</p>
 </li>
-<li><p>Tao Zan, Zhenjiang Hu. Blockchain-based Bidirectional Transformations for Access Control and Data Sharing in EMRs. Internetware&rsquo;2020: 12th Asia-Pacific Symposium on Internetware, Singapore, May 12-14, 2021. <a href="./publications/internetware20.pdf">paper</a></p>
+<li><p>Tao Zan, Zhenjiang Hu, Blockchain-based Bidirectional Transformations for Access Control and Data Sharing in EMRs, Internetware&rsquo;2020: 12th Asia-Pacific Symposium on Internetware, Singapore, May 12-14, 2021. <a href="./publications/internetware20.pdf">paper</a></p>
 </li>
-<li><p>Tao Zan, Hugo Pacheco, Hsiang-Shang Ko and Zhenjiang Hu, BiFluX: A Bidirectional Functional Update Language for XML,Japan Society for Software Science and Technology ComputerSoftware, Vol.33, No.4 (2016),pp.93 - 115</p>
+<li><p>Tao Zan, Hugo Pacheco, Hsiang-Shang Ko and Zhenjiang Hu, BiFluX: A Bidirectional Functional Update Language for XML,Japan Society for Software Science and Technology ComputerSoftware, Vol.33, No.4 (2016),pp.93 - 115.</p>
 </li>
-<li><p>Tao Zan, Li Liu, Hsiang-Shang Ko, Zhenjiang Hu, Brul: A Putback-Based Bidirectional Transformation Library for Updatable Views , 5th International Workshop on Bidirectional Transformations (BX 2016), as part of ETAPS 2016, Eindhoven, The Netherlands, April 8, 2016.</p>
+<li><p>Tao Zan, Li Liu, Hsiang-Shang Ko, Zhenjiang Hu, Brul: A Putback-Based Bidirectional Transformation Library for Updatable Views, 5th International Workshop on Bidirectional Transformations (BX 2016), as part of ETAPS 2016, Eindhoven, The Netherlands, April 8, 2016.</p>
 </li>
 <li><p>Xiao Cheng, Yuting Chen, Zhenjiang Hu, Tao Zan, Mengyu Liu, Hao Zhong, Jianjun Zhao, Supporting Selective Undo for Refactoring, 23rd IEEE International Conference on Software Analysis, Evolution, and Reengineering (SANER 2016), Osaka, Japan, March 14-18, 2016.</p>
 </li>
@@ -127,7 +127,7 @@
 邮箱: <i>zan</i> at <i>lyun.edu.cn</i> <br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-07 07:52:25 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-07 08:02:46 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
