--- a/english.html
+++ b/english.html
@@ -32,6 +32,8 @@ Department of Software Engineering <br />
 <h2>News</h2>
 <h2>Education &amp; Employment</h2>
 <ul>
+<li><p>2023.09 - now, Peking University, Visiting Scholar</p>
+</li>
 <li><p>2020.03 - now, <a href="http://www.lyun.edu.cn/">Longyan University</a>, Associate Professor</p>
 </li>
 <li><p>2016.10 - now, <a href="https://fundebug.com/">Xiamen Yunqi Information Technology Co., Ltd.</a>, Chairman &amp; General Manager</p>
@@ -127,7 +129,7 @@ Department of Software Engineering <br />
 Email: <i>zan</i> at <i>lyun.edu.cn</i> <br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-07 08:02:46 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-28 09:25:09 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
