--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 <h2>新闻</h2>
 <h2>教育与工作经历</h2>
 <ul>
+<li><p>2023.09 - 至今 <a href="北京大学，计算机科学与技术学院">北京大学，计算机科学与技术学院</a>，西部之光访问学者</p>
+</li>
 <li><p>2020.03 - 至今 <a href="http://www.lyun.edu.cn/">龙岩学院</a>，副教授</p>
 </li>
 <li><p>2016.10 - 至今 <a href="https://fundebug.com/">厦门云麒信息科技有限公司</a>，董事长兼总经理</p>
@@ -127,7 +129,7 @@
 邮箱: <i>zan</i> at <i>lyun.edu.cn</i> <br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-07 08:02:46 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-11-28 09:25:09 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
