--- a/index.html
+++ b/index.html
@@ -53,13 +53,15 @@
 </ul>
 <h2>科研</h2>
 <p>主攻软件工程，包括双向变换、隐私管理、程序修复、语音编程和区块链相关技术。</p>
-<h3>在研项目</h3>
+<h3>项目</h3>
 <ul>
 <li><p>基于情境的适应型双向变换程序合成的研究 (省自然科学基金项目(青年创新), 2021J05230, 8万, 2021 - 2024)</p>
 </li>
-<li><p>基于动态知识的软件bug静态分析及自动修复的研究(博士启动项目，LB2020010，25万, 2020 - 2023)</p>
+<li><p>基于动态知识的软件bug静态分析及自动修复的研究(博士启动项目，LB2020010，25万, 2020 - 2024)</p>
 </li>
 <li><p>端到端的信创软件质量监控平台关键技术研究(龙岩市奇迈科技基金，FLY2020QMG010004，30万, 2021 - 2023)</p>
+</li>
+<li><p>基于AI的语音编程系统研发(大学生创新创业训练计划项目，省级，1万，2022-2023)</p>
 </li>
 </ul>
 <h3>论文</h3>
@@ -129,7 +131,7 @@
 邮箱: <i>zan</i> at <i>lyun.edu.cn</i> <br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-11-28 09:25:09 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-12-08 09:16:52 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
