--- a/index.html
+++ b/index.html
@@ -55,20 +55,20 @@
 <p>主攻软件工程，包括双向变换、隐私管理、程序修复、语音编程和区块链相关技术。</p>
 <h3>项目</h3>
 <ul>
-<li><p>基于情境的适应型双向变换程序合成的研究 (省自然科学基金项目(青年创新), 2021J05230, 8万, 2021 - 2024)</p>
+<li><p>基于情境的适应型双向变换程序合成的研究 (省自然科学基金项目(青年创新), 2021J05230, 2021 - 2024)</p>
 </li>
-<li><p>基于动态知识的软件bug静态分析及自动修复的研究(博士启动项目，LB2020010，25万, 2020 - 2024)</p>
+<li><p>基于动态知识的软件bug静态分析及自动修复的研究(博士启动项目，LB2020010，2020 - 2024)</p>
 </li>
-<li><p>端到端的信创软件质量监控平台关键技术研究(龙岩市奇迈科技基金，FLY2020QMG010004，30万, 2021 - 2023)</p>
+<li><p>端到端的信创软件质量监控平台关键技术研究(龙岩市奇迈科技基金，FLY2020QMG010004，2021 - 2023)</p>
 </li>
-<li><p>基于AI的语音编程系统研发(大学生创新创业训练计划项目，省级，1万，2022-2023)</p>
+<li><p>基于AI的语音编程系统研发(大学生创新创业训练计划项目，省级，2022-2023) (已结题)</p>
 </li>
 </ul>
 <h3>论文</h3>
 <ul>
 <li><p>Xing Zhang, Ruifeng Xie, Guanchen Guo, Xiao He, Tao Zan, Zhenjiang Hu, Fusing Direct Manipulations into Functional Programs, 51st ACM SIGPLAN Symposium on Principles of Programming Languages (<a href="https://popl24.sigplan.org/">POPL 2024</a>), London, United Kingdom, January 17-19, 2024.</p>
 </li>
-<li><p>Lijie Wang, Tao Zan, Weihua Li, Shengrong Lu, A Syntax-directed Voice-activated Programming Environment for Java, 13th International Conference on IT in Medicine and Education, Wuyishan, China, November 24-26, 2023.</p>
+<li><p>Lijie Wang, Tao Zan, Weihua Li, Shengrong Lu, A Syntax-directed Voice-activated Programming Environment for Java, 13th International Conference on IT in Medicine and Education, Wuyishan, China, November 24-26, 2023. https://ieeexplore.ieee.org/document/10505494</p>
 </li>
 <li><p>Tao Zan, Zhenjiang Hu, VoiceJava: A Syntax-Directed Voice Programming Language for Java, Electronics 12, no. 1 (2023): 250. https://doi.org/10.3390/electronics12010250</p>
 </li>
@@ -131,7 +131,7 @@
 邮箱: <i>zan</i> at <i>lyun.edu.cn</i> <br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-12-08 09:16:52 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-26 15:08:02 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
