--- a/english.html
+++ b/english.html
@@ -66,7 +66,7 @@ Department of Software Engineering <br />
 <ul>
 <li><p>Xing Zhang, Ruifeng Xie, Guanchen Guo, Xiao He, Tao Zan, Zhenjiang Hu, Fusing Direct Manipulations into Functional Programs, 51st ACM SIGPLAN Symposium on Principles of Programming Languages (<a href="https://popl24.sigplan.org/">POPL 2024</a>), London, United Kingdom, January 17-19, 2024. </p>
 </li>
-<li><p>Lijie Wang, Tao Zan, Weihua Li, Shengrong Lu, A Syntax-directed Voice-activated Programming Environment for Java, 13th International Conference on IT in Medicine and Education, Wuyishan, China, November 24-26, 2023.</p>
+<li><p>Lijie Wang, Tao Zan, Weihua Li, Shengrong Lu, A Syntax-directed Voice-activated Programming Environment for Java, 13th International Conference on IT in Medicine and Education, Wuyishan, China, November 24-26, 2023. https://ieeexplore.ieee.org/document/10505494</p>
 </li>
 <li><p>Tao Zan, Zhenjiang Hu, VoiceJava: A Syntax-Directed Voice Programming Language for Java, Electronics 12, no. 1 (2023): 250. https://doi.org/10.3390/electronics12010250.</p>
 </li>
@@ -129,7 +129,7 @@ Department of Software Engineering <br />
 Email: <i>zan</i> at <i>lyun.edu.cn</i> <br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-12-08 09:16:52 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-04-26 15:08:02 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
