[add] jss journal article

--- a/english.html
+++ b/english.html
@@ -64,6 +64,8 @@ Department of Software Engineering <br />
 </ul>
 <h3>Publications</h3>
 <ul>
+<li><p>Xiao He, Tao Zan, BIT: A Template-based Approach to Incremental and Bidirectional Model-to-text Transformation, The Journal of Systems &amp; Software, June 20, 2024, Accepted.</p>
+</li>
 <li><p>Xing Zhang, Ruifeng Xie, Guanchen Guo, Xiao He, Tao Zan, Zhenjiang Hu, Fusing Direct Manipulations into Functional Programs, 51st ACM SIGPLAN Symposium on Principles of Programming Languages (<a href="https://popl24.sigplan.org/">POPL 2024</a>), London, United Kingdom, January 17-19, 2024. </p>
 </li>
 <li><p>Lijie Wang, Tao Zan, Weihua Li, Shengrong Lu, A Syntax-directed Voice-activated Programming Environment for Java, 13th International Conference on IT in Medicine and Education, Wuyishan, China, November 24-26, 2023. https://ieeexplore.ieee.org/document/10505494</p>
@@ -129,7 +131,7 @@ Department of Software Engineering <br />
 Email: <i>zan</i> at <i>lyun.edu.cn</i> <br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-04-26 15:08:02 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-06-24 16:14:18 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
