--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 <h2>新闻</h2>
 <h2>教育与工作经历</h2>
 <ul>
-<li><p>2023.09 - 至今 <a href="北京大学，计算机科学与技术学院">北京大学，计算机科学与技术学院</a>，西部之光访问学者</p>
-</li>
 <li><p>2020.03 - 至今 <a href="http://www.lyun.edu.cn/">龙岩学院</a>，副教授</p>
 </li>
 <li><p>2016.10 - 至今 <a href="https://fundebug.com/">厦门云麒信息科技有限公司</a>，董事长兼总经理</p>
+</li>
+<li><p>2023.9 - 2024.7 <a href="北京大学，计算机科学与技术学院">北京大学，计算机科学与技术学院</a>，西部之光访问学者</p>
 </li>
 <li><p>2013.8 - 2014.7 <a href="http://linksh.ltd/">北京领祈石诣软件科技有限公司</a>，联合创始人</p>
 </li>
@@ -52,14 +52,14 @@
 </li>
 </ul>
 <h2>科研</h2>
-<p>主攻软件工程，包括双向变换、隐私管理、程序修复、语音编程和区块链相关技术。</p>
+<p>主攻软件工程，包括程序语言设计、双向变换、异常分析、程序修复、语音编程。</p>
 <h3>项目</h3>
 <ul>
 <li><p>基于情境的适应型双向变换程序合成的研究 (省自然科学基金项目(青年创新), 2021J05230, 2021 - 2024)</p>
 </li>
 <li><p>基于动态知识的软件bug静态分析及自动修复的研究(博士启动项目，LB2020010，2020 - 2024)</p>
 </li>
-<li><p>端到端的信创软件质量监控平台关键技术研究(龙岩市奇迈科技基金，FLY2020QMG010004，2021 - 2023)</p>
+<li><p>端到端的信创软件质量监控平台关键技术研究(龙岩市奇迈科技基金，FLY2020QMG010004，2021 - 2023) (已结题)</p>
 </li>
 <li><p>基于AI的语音编程系统研发(大学生创新创业训练计划项目，省级，2022-2023) (已结题)</p>
 </li>
@@ -118,7 +118,7 @@
 </ul>
 <h2>课程</h2>
 <ul>
-<li><p>数据结构与算法: <a href="https://gitee.com/se-193/">2020年秋</a>, 2021年春, 2021年秋, 2022年秋</p>
+<li><p>数据结构与算法: <a href="https://gitee.com/se-193/">2020年秋</a>, 2021年春, 2021年秋, 2022年秋, 2024年秋</p>
 </li>
 <li><p>软件体系结构: 2021年春, 2022年春, 2023年春</p>
 </li>
@@ -133,7 +133,7 @@
 邮箱: <i>zan</i> at <i>lyun.edu.cn</i> <br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-06-24 16:14:18 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-09-02 16:28:51 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
