--- a/english.html
+++ b/english.html
@@ -32,11 +32,11 @@ Department of Software Engineering <br />
 <h2>News</h2>
 <h2>Education &amp; Employment</h2>
 <ul>
-<li><p>2023.09 - now, Peking University, Visiting Scholar</p>
-</li>
 <li><p>2020.03 - now, <a href="http://www.lyun.edu.cn/">Longyan University</a>, Associate Professor</p>
 </li>
 <li><p>2016.10 - now, <a href="https://fundebug.com/">Xiamen Yunqi Information Technology Co., Ltd.</a>, Chairman &amp; General Manager</p>
+</li>
+<li><p>2023.09 - 2024.07, Peking University, Visiting Scholar</p>
 </li>
 <li><p>2014.9 - 2015.12 <a href="https://www.popin.cc/zh/">PopIn Inc. Baidu</a>, Data Analyst</p>
 </li>
@@ -52,7 +52,7 @@ Department of Software Engineering <br />
 </li>
 </ul>
 <h2>Research</h2>
-<p>My main interest is in software engineering, especially about bidirectional transformation, privacy management, program repair, speech-to-program and blockchain technologies.</p>
+<p>My main interest is in software engineering, especially about programming languages, bidirectional transformation, bug analysis, program repair, and speech-to-program.</p>
 <h3>Current Research Projects</h3>
 <ul>
 <li><p>Research on Static Analysis and Automatic Repair of Bugs based on Dynamic Knowledge</p>
@@ -116,7 +116,7 @@ Department of Software Engineering <br />
 </ul>
 <h2>Teaching</h2>
 <ul>
-<li><p>Data Structure and Algorithms: <a href="https://gitee.com/se-193/">Fall 2020</a>, Spring 2021, Fall 2021, Fall 2022</p>
+<li><p>Data Structure and Algorithms: <a href="https://gitee.com/se-193/">Fall 2020</a>, Spring 2021, Fall 2021, Fall 2022, Fall 2024</p>
 </li>
 <li><p>Software Architecture and Design: Spring 2021, Spring 2022, Spring 2023</p>
 </li>
@@ -131,7 +131,7 @@ Department of Software Engineering <br />
 Email: <i>zan</i> at <i>lyun.edu.cn</i> <br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-06-24 16:14:18 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2024-09-02 16:28:51 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
