--- a/english.html
+++ b/english.html
@@ -64,7 +64,9 @@ Department of Software Engineering <br />
 </ul>
 <h3>Publications</h3>
 <ul>
-<li><p>Xiao He, Tao Zan, BIT: A Template-based Approach to Incremental and Bidirectional Model-to-text Transformation, The Journal of Systems &amp; Software, June 20, 2024, Accepted.</p>
+<li><p>Tao Zan, Xing Zhang, Xiao He, Zhenjiang Hu, Intentionally Fusing Direct Manipulations into SVG Programs, Information, 2025, 16(3), 169.</p>
+</li>
+<li><p>Xiao He, Tao Zan, BIT: A Template-based Approach to Incremental and Bidirectional Model-to-text Transformation, The Journal of Systems &amp; Software, 216:113148, 2024.</p>
 </li>
 <li><p>Xing Zhang, Ruifeng Xie, Guanchen Guo, Xiao He, Tao Zan, Zhenjiang Hu, Fusing Direct Manipulations into Functional Programs, 51st ACM SIGPLAN Symposium on Principles of Programming Languages (<a href="https://popl24.sigplan.org/">POPL 2024</a>), London, United Kingdom, January 17-19, 2024. </p>
 </li>
@@ -131,7 +133,7 @@ Department of Software Engineering <br />
 Email: <i>zan</i> at <i>lyun.edu.cn</i> <br /></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2024-09-02 16:28:51 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2025-03-05 14:18:16 CST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
